fix(OutputDisplay.jsx) show x-scroll on open when overflow - x, otherwise don't (max-width: 100% unless x-overflow)

--- a/src/components/parts/OutputDisplay.css
+++ b/src/components/parts/OutputDisplay.css
@@ -2,6 +2,7 @@
 	min-width: 12px;
   min-height: 12px; 
 	height: 100%;  
+	width: 100%;
 	background: #272727;
 	position: relative;
 	border: 0.5em solid #E8E4E4;
@@ -12,6 +13,11 @@
 
 .output-display-opening-x { 
 	height: 0 !important; 
+	max-width: 100%;
+}
+
+.output-display-opening-x-width-overflow { 
+	height: 0 !important;  
 }
 
 .output-display-opening-y { 
@@ -52,8 +58,6 @@
 	resize: none; 
 }
 
-
-   
 .output-display-refresh { 
 /*	width: 100%; 
 	height: 100%;
